--- a/index.html
+++ b/index.html
@@ -1,173 +1,122 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>FreeMC</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     * { box-sizing: border-box; }
-    html, body { margin: 0; padding: 0; overflow-x: hidden; }
-
+    html, body { margin: 0; padding: 0; overflow-x: hidden; background: #0f172a; color: #fff; }
     #search-input:focus { outline: none; box-shadow: none; }
-    .transition-scale { transition: transform 0.3s ease; }
-    .transition-scale:hover { transform: scale(1.02); }
-    .fade-in { animation: fadeIn 0.5s ease-in-out both; }
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-    .tab { transition: all 0.3s ease; padding: 0.75rem; border-radius: 0.75rem; }
-    .tab:hover .material-icons { color: #38bdf8; }
+    .fade-in { animation: fadeIn 0.5s ease both; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+    .tab { transition: color 0.3s ease; padding: 0.75rem; }
     .tab.active .material-icons { color: rgba(96,165,250,0.6); }
+    .tab:hover .material-icons { color: #38bdf8; }
 
-    .background-polaris {
-      background: repeating-linear-gradient(45deg,
-        #0f172a 0, #0f172a 1px, rgba(13,19,33) 1px, rgba(13,19,33) 2px,
-        #0f172a 2px, #0f172a 18px, rgba(13,19,33) 18px, rgba(13,19,33) 19px,
-        #0f172a 19px, #0f172a 35px
-      );
-    }
-    .dot { position: absolute; width: 6px; height: 6px; background: rgba(255,255,255,0.08); border-radius: 9999px; animation: floatUp 12s linear infinite; }
-    @keyframes floatUp { 0% { transform: translateY(100vh) scale(0.5); opacity: 0; } 50% { opacity: 1; } 100% { transform: translateY(-100px) scale(1); opacity: 0; } }
-
-    .carousel-dot { width: 10px; height: 10px; background: #aaa; border-radius: 50%; display: inline-block; margin: 0 4px; cursor: pointer; transition: background-color 0.3s ease; }
-    .carousel-dot.active { background: #38bdf8; }
-    .carousel-dot:hover { background: #60a5fa; }
-    .carousel-img { width: 100%; height: auto; object-fit: contain; opacity: 0; transition: opacity 0.5s ease-in-out; }
+    .carousel-img { width: 100%; object-fit: contain; opacity: 0; transition: opacity 0.5s ease; }
     .carousel-img.loaded { opacity: 1; }
+    .carousel-dot { width: 10px; height: 10px; border-radius: 50%; background: #aaa; margin: 0 4px; cursor: pointer; transition: background 0.3s; }
+    .carousel-dot.active { background: #38bdf8; }
 
-    .card-buttons { display: flex; justify-content: center; align-items: center; gap: 1rem; margin-top: 1rem; }
-    .card-buttons a { padding: 0.5rem 1rem; border-radius: 0.5rem; font-weight: 500; transition: background 0.2s, color 0.2s; }
-    .card-buttons .marketplace { background-color: #22c55e; color: white; }
-    .card-buttons .marketplace:hover { background-color: #16a34a; }
-    .card-buttons .download { background-color: #3b82f6; color: white; }
-    .card-buttons .download:hover { background-color: #2563eb; }
+    .btn { padding: 0.5rem 1rem; border-radius: 0.5rem; font-weight: 500; transition: transform 0.2s ease; }
+    .btn.download { background: #3b82f6; color: #fff; }
+    .btn.download:hover { transform: scale(1.05); }
+    .btn.marketplace { background: #22c55e; color: #fff; }
+    .btn.marketplace:hover { transform: scale(1.05); }
+
+    .card-buttons { display: flex; justify-content: center; gap: 1rem; margin-top: 1rem; }
   </style>
 </head>
-<body class="relative text-white bg-gray-900 min-h-screen overflow-x-hidden">
-  <div class="absolute inset-0 z-[-1] background-polaris overflow-hidden">
-    <div class="dot" style="left:5%;animation-delay:0s"></div>
-    <div class="dot" style="left:15%;animation-delay:1s"></div>
-    <div class="dot" style="left:25%;animation-delay:2s"></div>
-    <div class="dot" style="left:35%;animation-delay:3s"></div>
-    <div class="dot" style="left:45%;animation-delay:4s"></div>
-    <div class="dot" style="left:55%;animation-delay:2s"></div>
-    <div class="dot" style="left:65%;animation-delay:3s"></div>
-    <div class="dot" style="left:75%;animation-delay:1s"></div>
-    <div class="dot" style="left:85%;animation-delay:0.5s"></div>
-    <div class="dot" style="left:95%;animation-delay:2.5s"></div>
-  </div>
-  <div class="flex flex-col md:flex-row min-h-screen">
-    <aside class="w-full md:w-20 bg-gray-800 m-4 rounded-3xl p-6 flex md:flex-col flex-row items-center justify-around space-x-6 md:space-x-0 md:space-y-10 shadow-lg">
-      <button class="tab" data-type="worlds"><span class="material-icons">public</span></button>
-      <button class="tab" data-type="addons"><span class="material-icons">extension</span></button>
-      <button class="tab" data-type="textures"><span class="material-icons">palette</span></button>
-      <button class="tab" data-type="skins"><span class="material-icons">checkroom</span></button>
-    </aside>
-    <main class="flex-1 p-4">
-      <div class="mb-6">
-        <input id="search-input" type="text" placeholder="Search..." class="w-full bg-gray-800 text-white px-4 py-3 rounded-xl shadow-lg" />
-      </div>
-      <h1 id="section-title" class="text-2xl font-bold capitalize mb-4"></h1>
-      <div id="grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
-      <div id="no-results" class="text-gray-400 text-center mt-8 hidden">No results found.</div>
-    </main>
-  </div>
-  <div class="relative w-full bg-gray-900 text-center py-3 text-sm z-40 shadow-inner flex justify-center items-center space-x-2 mt-10">
-    <span class="material-icons text-blue-400">lightbulb</span>
-    <span>Have suggestions? <a href="https://form.typeform.com/to/UyA2yq19" target="_blank" class="text-blue-400 underline hover:text-blue-300">Let us know here</a>.</span>
-  </div>
+<body>
+  <main class="p-4">
+    <div class="mb-6 fade-in">
+      <input id="search-input" type="text" placeholder="Search..." class="w-full bg-gray-800 text-white px-4 py-3 rounded-xl shadow-lg" />
+    </div>
+    <h1 id="section-title" class="text-2xl font-bold capitalize mb-4 fade-in">worlds</h1>
+    <div id="grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+    <div id="no-results" class="hidden text-center text-gray-400 mt-8">No results found.</div>
+  </main>
   <script>
-    window.addEventListener('beforeunload', () => window.scrollTo(0, 0));
+    let currentTab = 'worlds', allData = {};
+    const grid = document.getElementById('grid'),
+          searchInput = document.getElementById('search-input'),
+          noResults = document.getElementById('no-results'),
+          sectionTitle = document.getElementById('section-title');
 
-    let currentTab = localStorage.getItem('currentTab') || 'worlds';
-    let allData = {};
-    const tabs = document.querySelectorAll('.tab');
-    const sectionTitle = document.getElementById('section-title');
-    const grid = document.getElementById('grid');
-    const searchInput = document.getElementById('search-input');
-    const noResults = document.getElementById('no-results');
-
-    async function loadData() {
+    async function load() {
       try {
         const res = await fetch('api.json');
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+        if (!res.ok) throw new Error();
         allData = await res.json();
         localStorage.setItem('freemcData', JSON.stringify(allData));
-        renderGrid();
+        render();
       } catch {
         const stored = localStorage.getItem('freemcData');
-        if (stored) { allData = JSON.parse(stored); renderGrid(); }
+        if (stored) { allData = JSON.parse(stored); render(); }
         else { noResults.textContent = 'Failed to load data.'; noResults.classList.remove('hidden'); }
       }
     }
 
-    function truncate(text, max = 100) {
+    function truncate(text, max=100) {
       return text ? (text.length > max ? text.slice(0, max) + '...' : text) : '';
     }
 
     function createCard(item) {
       const media = item.media?.length ? item.media : (item.banner ? [item.banner] : []);
-      const cid = 'c_' + Math.random().toString(36).substr(2, 8);
-      const slides = media.map((src, i) =>
-        `<img src="${src}" onload="this.classList.add('loaded')" class="carousel-img ${i ? 'hidden' : ''}" data-index="${i}"/>`
+      const id = 'c_' + Math.random().toString(36).substr(2, 6);
+      const slides = media.map((src, idx) =>
+        `<img src="${src}" class="carousel-img ${idx ? 'hidden' : ''} fade-in" onload="this.classList.add('loaded')" data-idx="${idx}" />`
       ).join('');
-      const dots = media.map((_, i) =>
-        `<span class="carousel-dot ${!i ? 'active' : ''}" data-index="${i}" data-target="${cid}"></span>`
+      const dots = media.map((_, idx) =>
+        `<span class="carousel-dot ${!idx ? 'active' : ''}" data-idx="${idx}" data-id="${id}"></span>`
       ).join('');
 
       return `
-        <div class="bg-gray-800 rounded-2xl overflow-hidden shadow-lg transition-scale fade-in">
-          <div id="${cid}" class="relative">${slides}<div class="absolute bottom-2 w-full text-center">${dots}</div></div>
-          <div class="p-4 flex flex-col gap-2">
+        <div class="bg-gray-800 rounded-xl overflow-hidden shadow-lg transition-scale fade-in">
+          <div id="${id}" class="relative">
+            ${slides}
+            <div class="absolute bottom-2 w-full text-center">${dots}</div>
+          </div>
+          <div class="p-4">
             <h2 class="font-semibold text-lg text-blue-400">${truncate(item.title, 30)}</h2>
-            <p class="text-gray-300 text-sm">${truncate(item.description || '', 100)}</p>
+            <p class="text-gray-300 text-sm">${truncate(item.description, 100)}</p>
             <div class="card-buttons">
-              <a href="${item.marketplace || '#'}" class="marketplace">Marketplace</a>
-              <a href="${item.url || '#'}" class="download">Download</a>
+              <a href="${item.url || '#'}" class="btn download">Download</a>
+              <a href="${item.marketplace || '#'}" class="btn marketplace">Marketplace</a>
             </div>
           </div>
         </div>
       `;
     }
 
-    function renderGrid() {
+    function render() {
       const list = allData[currentTab] || [];
-      const filtered = list.filter(item => item.title.toLowerCase().includes(searchInput.value.toLowerCase()));
+      const q = searchInput.value.toLowerCase();
+      const filtered = list.filter(item => item.title.toLowerCase().includes(q));
       grid.innerHTML = filtered.length ? filtered.map(createCard).join('') : '';
       noResults.classList.toggle('hidden', filtered.length > 0);
-      setupCarousels();
+      setupCarousel();
     }
 
-    function setupCarousels() {
+    function setupCarousel() {
       document.querySelectorAll('.carousel-dot').forEach(dot => {
         dot.onclick = () => {
-          const idx = +dot.dataset.index;
-          const tgt = dot.dataset.target;
-          const cont = document.getElementById(tgt);
-          cont.querySelectorAll('.carousel-img').forEach((img, i) => img.classList.toggle('hidden', i !== idx));
-          cont.querySelectorAll('.carousel-dot').forEach((d, i) => d.classList.toggle('active', i === idx));
+          const idx = +dot.dataset.idx;
+          const id = dot.dataset.id;
+          const container = document.getElementById(id);
+          container.querySelectorAll('.carousel-img').forEach((img, i) => img.classList.toggle('hidden', i !== idx));
+          container.querySelectorAll('.carousel-dot').forEach((d, i) => d.classList.toggle('active', i === idx));
         };
       });
     }
 
-    document.addEventListener('DOMContentLoaded', () => {
-      tabs.forEach(tab => {
-        const type = tab.dataset.type;
-        if (type === currentTab) tab.classList.add('active');
-        tab.onclick = () => {
-          currentTab = type;
-          localStorage.setItem('currentTab', type);
-          tabs.forEach(t => t.classList.remove('active'));
-          tab.classList.add('active');
-          sectionTitle.textContent = type;
-          renderGrid();
-        };
-      });
-      searchInput.oninput = renderGrid;
-      sectionTitle.textContent = currentTab;
-      loadData();
-    });
+    searchInput.oninput = render;
+    document.addEventListener('DOMContentLoaded', () => { load(); });
   </script>
 </body>
 </html>
